--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
           <div class="actions">
             <button type="submit" class="btn btn--primary">경로 찾기</button>
             <button id="start-navigation" type="button" class="btn btn--accent" disabled>내비게이션 시작</button>
-            <button id="exit-navigation" type="button" class="btn btn--ghost" hidden>내비게이션 종료</button>
             <button id="clear-route" type="button" class="btn btn--ghost">초기화</button>
           </div>
         </form>
@@ -51,7 +50,12 @@
       </section>
 
       <section class="panel panel--summary" aria-label="여행 요약">
-        <h2>여정 요약</h2>
+        <div class="navigation-header">
+          <h2>여정 요약</h2>
+          <button id="exit-navigation" class="btn btn--ghost btn--small navigation-exit" hidden>
+            내비게이션 종료
+          </button>
+        </div>
         <div id="navigation-status" class="navigation-status" aria-live="polite">
           <p class="placeholder">내비게이션을 시작하면 현재 위치와 진행 상황이 표시됩니다.</p>
         </div>
